manifest/postgresql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
  labels:
    app: postgresql
    tier: database
spec:
  containers:
    - name: postgresql
      image: postgres
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: postgresql-data
          mountPath: "/var/lib/postgresql/data"
  volumes:
    - name: postgresql-data
      persistentVolumeClaim:
        claimName: postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: db # result app connect to PostgreSQL using the name `db`
spec:
  selector:
    app: postgresql
    tier: database
  ports:
    - port: 5432
      targetPort: 5432
