manifest/result.yaml
apiVersion: v1
kind: Pod
metadata:
  name: result
  labels:
    app: result
    tier: frontend
spec:
  containers:
    - name: result
      image: dockersamples/examplevotingapp_result
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  selector:
    app: result
    tier: frontend
  type: ClusterIP # type ClusterIP to use ingress-nginx
  ports:
    - name: "result-service"
      port: 5001
      targetPort: 80
