manifest/voting.yaml
apiVersion: v1
kind: Pod
metadata:
  name: voting
  labels:
    app: voting
    tier: frontend
spec:
  containers:
    - name: voting
      image: dockersamples/examplevotingapp_vote
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: voting
spec:
  selector:
    app: voting
    tier: frontend
  type: ClusterIP # type ClusterIP to use ingress-nginx
  ports:
    - name: "vote-service"
      port: 5000
      targetPort: 80
